[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Delete.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="."]
margin_left = 405.0
margin_top = 271.0
margin_right = 570.0
margin_bottom = 332.0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 186.0
margin_top = 84.0
margin_right = 764.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Type in your username and password and thenn press the delete button"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Userbox" type="TextEdit" parent="."]
margin_left = 415.0
margin_top = 193.0
margin_right = 559.0
margin_bottom = 217.0
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 371.0
margin_top = 457.0
margin_right = 613.0
margin_bottom = 526.0
text = "Inncorrect username and or password"
percent_visible = -0.0322581
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Passbox" type="TextEdit" parent="."]
margin_left = 414.0
margin_top = 226.0
margin_right = 558.0
margin_bottom = 250.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 403.0
margin_top = 347.0
margin_right = 573.0
margin_bottom = 399.0
text = "Go back to settings"
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
